# QmlStudy

./: .gitattributes  .gitignore  CMakeLists.txt  Readme.md
.cache/clangd/index/: main.cpp.BA01ADD6E9A6EFB8.idx
M1_Plugin/: CMakeLists.txt
M1_Plugin/qml/: main.qml
M1_Plugin/src/: main.cpp
M2_FileWatcher/: CMakeLists.txt
M2_FileWatcher/qml/: MainWindow.qml  main.qml
M2_FileWatcher/src/: main.cpp
M2_FileWatcher/src/core/: ComponentCreatorEngine.cpp  FileWatcher.cpp
M3_Theme/: CMakeLists.txt
M3_Theme/assets/: Starter5_zh_CN.ts  assets.qrc
M3_Theme/qml/: Global.qml  MainWindow.qml  main.qml  qml.qrc  qmldir
M3_Theme/qml/Components/: NavigationBar.qml
M3_Theme/qml/Controls/: BaseTabBar.qml
M3_Theme/qml/Pages/: DownloadPage.qml  MainPage.qml  MediaPage.qml  PlayListPage.qml  PlayPage.qml  SettingsPage.qml
M3_Theme/src/: main.cpp
M3_Theme/src/core/: ComponentCreatorEngine.h
P18_Signal/: CMakeLists.txt
P18_Signal/qml/: main.qml
P20_QmlAndC++/: CMakeLists.txt
P20_QmlAndC++/qml/: MyRectangle.qml  main.qml
P20_QmlAndC++/src/: main.cpp  myobject.cpp  myobject.h
P25_Layout/: CMakeLists.txt
P25_Layout/qml/: main.qml
P25_Layout/src/: main.cpp
P26_CustomGrid/: CMakeLists.txt
P26_CustomGrid/qml/: main.qml
P26_CustomGrid/src/: main.cpp
P29_CustomModel/: CMakeLists.txt
P29_CustomModel/qml/: main.qml
P29_CustomModel/src/: main.cpp
P30_ChartView_PieSeries/: CMakeLists.txt
P30_ChartView_PieSeries/qml/: main.qml
P30_ChartView_PieSeries/src/: main.cpp
Starter5/: CMakeLists.txt
Starter5/qml/: main.qml
Starter6/: CMakeLists.txt  main.cpp
XQuick/: CMakeLists.txt  Test.qml  XQuick.qrc  XQuickPlugin.cpp  qmldir
XQuick/SubModule/: CMakeLists.txt  Test.qml  TestSingleton.qml  XButton.qml  XQuickSubModulePlugin.cpp  XQuickSubModulePlugin.h  qmldir
